sweep_complete2.log
nohup: ignoring input
Traceback (most recent call last):
  File "/localhome/bendouro/ByzFL_snn/byzfl/run_complete_snn_sweep.py", line 2, in <module>
    from byzfl import run_benchmark
  File "/localhome/bendouro/ByzFL_snn/byzfl/byzfl/__init__.py", line 4, in <module>
    from .benchmark import *
  File "/localhome/bendouro/ByzFL_snn/byzfl/byzfl/benchmark/__init__.py", line 2, in <module>
    from .benchmark import run_benchmark
  File "/localhome/bendouro/ByzFL_snn/byzfl/byzfl/benchmark/benchmark.py", line 6, in <module>
    from byzfl.benchmark.train import start_training
  File "/localhome/bendouro/ByzFL_snn/byzfl/byzfl/benchmark/train.py", line 10, in <module>
    from byzfl.benchmark.data import load_and_split_data
  File "/localhome/bendouro/ByzFL_snn/byzfl/byzfl/benchmark/data.py", line 196
    test_cache_path = os.path.join(cache_dir,
                                  ^
SyntaxError: '(' was never closed
